--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "Pychemist"
-version = "0.0.2"
+version = "0.0.3"
 description = "Transform raw data into insights."
 readme = "README.md"
 requires-python = ">=3.8"
@@ -12,7 +12,7 @@ classifiers = [
 ]
 
 authors = [
-    { name = "Jeroen van Raak", email = "jeroen@vanraak.net" }
+    { name = "Jeroen van Raak", email = "j.j.f.vanraak@uva.nl" }
 ]
 
 urls = { Homepage = "https://github.com/vanraak/pychemist" }
