--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,65 +1,30 @@
-name: Upload Python Package
+name: Release
 
 on:
-  release:
-    types: [published]
-
-  workflow_dispatch:
-  
-permissions:
-  contents: read
+  push:
+    tags:
+      - 'v*'
 
 jobs:
-  release-build:
+  publish:
     runs-on: ubuntu-latest
+    environment: pypi  #
+    permissions:
+      id-token: write  #
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v5
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          python-version: "3.x"
+          python-version: 3.11
 
-      - name: Build release distributions
+      - name: Build package
         run: |
-          # NOTE: put your own distribution build steps here.
-          python -m pip install build
+          pip install build
           python -m build
 
-      - name: Upload distributions
-        uses: actions/upload-artifact@v4
-        with:
-          name: release-dists
-          path: dist/
-
-  pypi-publish:
-    runs-on: ubuntu-latest
-    environtment: pypi
-    needs:
-      - release-build
-    permissions:
-      # IMPORTANT: this permission is mandatory for trusted publishing
-      id-token: write
-
-    # Dedicated environments with protections for publishing are strongly recommended.
-    # For more information, see: https://docs.github.com/en/actions/deployment/targeting-different-environments/using-environments-for-deployment#deployment-protection-rules
-    environment:
-      name: pypi
-      # OPTIONAL: uncomment and update to include your PyPI project URL in the deployment status:
-      url: https://pypi.org/p/pychemist
-      #
-      # ALTERNATIVE: if your GitHub Release name is the PyPI project version string
-      # ALTERNATIVE: exactly, uncomment the following line instead:
-      # url: https://pypi.org/project/YOURPROJECT/${{ github.event.release.name }}
-
-    steps:
-      - name: Retrieve release distributions
-        uses: actions/download-artifact@v4
-        with:
-          name: release-dists
-          path: dist/
-
-      - name: Publish release distributions to PyPI
+      - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          packages-dir: dist/
